force-app/main/default/objects/Contract/fields/Applicability__c.field-meta.xml
<CustomField>
    <fullName>Applicability__c</fullName>
    <description>Defines whether contract applies on local of group level</description>
    <inlineHelpText>Defines whether contract applies on local of group level</inlineHelpText>
    <label>Applicability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>