force-app/main/default/objects/Contract/fields/Contract_Category__c.field-meta.xml
<CustomField>
    <fullName>Contract_Category__c</fullName>
    <description>Classifies Contract by type of agreement</description>
    <label>Contract Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2022 NCNR agreement</fullName>
            </value>
            <value>
                <fullName>Agency Agreement</fullName>
            </value>
            <value>
                <fullName>Branding Agreement</fullName>
            </value>
            <value>
                <fullName>Commission Agreement</fullName>
            </value>
            <value>
                <fullName>Distribution Agreement</fullName>
            </value>
            <value>
                <fullName>End Use Statement</fullName>
            </value>
            <value>
                <fullName>License Agreement</fullName>
            </value>
            <value>
                <fullName>MoU, LoI, MoA</fullName>
            </value>
            <value>
                <fullName>NDA</fullName>
            </value>
            <value>
                <fullName>PRA</fullName>
            </value>
            <value>
                <fullName>Quality Agreement</fullName>
            </value>
            <value>
                <fullName>Reseller Agreement</fullName>
            </value>
            <value>
                <fullName>RIL Software Agreement</fullName>
            </value>
            <value>
                <fullName>Risk Waiver Agreement</fullName>
            </value>
            <value>
                <fullName>Sales Agreement</fullName>
            </value>
            <value>
                <fullName>Service Agreement</fullName>
            </value>
            <value>
                <fullName>Special Agreement</fullName>
            </value>
            <value>
                <fullName>Design Partner Program Agreement</fullName>
            </value>
            <value>
                <fullName>Solution Partner Program Agreement</fullName>
            </value>
            <value>
                <fullName>Service Referral Commission Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>