force-app/main/default/objects/Contract/fields/Contract_Description__c.field-meta.xml
<CustomField>
    <fullName>Contract_Description__c</fullName>
    <description>Content of Contract</description>
    <inlineHelpText>Please describe 
- What is defined by the contract
- Most relevant terms that form our risk</inlineHelpText>
    <label>Contract Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>