force-app/main/default/objects/Contract/fields/Contract_Search_Info__c.field-meta.xml
<CustomField>
    <fullName>Contract_Search_Info__c</fullName>
    <inlineHelpText>Field to support search for account names</inlineHelpText>
    <label>Contract Search Info</label>
    <length>120</length>
    <type>Text</type>
</CustomField>