force-app/main/default/objects/Contract/fields/Contract_Survival_Period_Years__c.field-meta.xml
<CustomField>
    <fullName>Contract_Survival_Period_Years__c</fullName>
    <description>Duration the confidentiality of NDA&apos;s</description>
    <label>Confidentiality Survival Period (Years)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>