force-app/main/default/objects/Contract/fields/EUS_Document_Received__c.field-meta.xml
<CustomField>
    <fullName>EUS_Document_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Verify that I received signed End Use Statement</inlineHelpText>
    <label>Received Signed EUS Document</label>
    <type>Checkbox</type>
</CustomField>