force-app/main/default/objects/Contract/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CEL chips</fullName>
            </value>
            <value>
                <fullName>CEL modules</fullName>
            </value>
            <value>
                <fullName>CEL services</fullName>
            </value>
            <value>
                <fullName>CEL MA</fullName>
            </value>
            <value>
                <fullName>POS chips</fullName>
            </value>
            <value>
                <fullName>POS modules</fullName>
            </value>
            <value>
                <fullName>POS services</fullName>
            </value>
            <value>
                <fullName>SHO chips</fullName>
            </value>
            <value>
                <fullName>SHO modules</fullName>
            </value>
            <value>
                <fullName>SHO services</fullName>
            </value>
            <value>
                <fullName>Antennas</fullName>
            </value>
            <value>
                <fullName>Support tools</fullName>
            </value>
            <value>
                <fullName>Internal Use Only</fullName>
            </value>
            <value>
                <fullName>Services PPU</fullName>
            </value>
            <value>
                <fullName>Services Quota</fullName>
            </value>
            <value>
                <fullName>Services Monthly Fee</fullName>
            </value>
            <value>
                <fullName>Services Technical Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>