force-app/main/default/objects/Contract/fields/Product_Center__c.field-meta.xml
<CustomField>
    <fullName>Product_Center__c</fullName>
    <label>Product Center</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>CELL</fullName>
            </value>
            <value>
                <fullName>SHO</fullName>
            </value>
            <value>
                <fullName>SER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>