force-app/main/default/objects/Contract/fields/Product_Grade__c.field-meta.xml
<CustomField>
    <fullName>Product_Grade__c</fullName>
    <label>Product Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>