force-app/main/default/objects/Contract/fields/Product_Series__c.field-meta.xml
<CustomField>
    <fullName>Product_Series__c</fullName>
    <label>Product Series</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACCESS-CTRL</fullName>
            </value>
            <value>
                <fullName>ALEX-N3</fullName>
            </value>
            <value>
                <fullName>ALEX-R5</fullName>
            </value>
            <value>
                <fullName>ANNA-B1</fullName>
            </value>
            <value>
                <fullName>BMD-2</fullName>
            </value>
            <value>
                <fullName>BMD-3</fullName>
            </value>
            <value>
                <fullName>DES-SEC</fullName>
            </value>
            <value>
                <fullName>E2E-SEC</fullName>
            </value>
            <value>
                <fullName>ELLA-W1</fullName>
            </value>
            <value>
                <fullName>EMMY-W1</fullName>
            </value>
            <value>
                <fullName>EMMY-W2</fullName>
            </value>
            <value>
                <fullName>JODY-B3</fullName>
            </value>
            <value>
                <fullName>JODY-W1</fullName>
            </value>
            <value>
                <fullName>JODY-W2</fullName>
            </value>
            <value>
                <fullName>JODY-W3</fullName>
            </value>
            <value>
                <fullName>JODY-W4</fullName>
            </value>
            <value>
                <fullName>LARA-R2</fullName>
            </value>
            <value>
                <fullName>LARA-R3</fullName>
            </value>
            <value>
                <fullName>LARA-R4</fullName>
            </value>
            <value>
                <fullName>Legacy</fullName>
            </value>
            <value>
                <fullName>Legacy HB</fullName>
            </value>
            <value>
                <fullName>LEON-G1</fullName>
            </value>
            <value>
                <fullName>LILY-W1</fullName>
            </value>
            <value>
                <fullName>LISA-C2</fullName>
            </value>
            <value>
                <fullName>LISA-N1</fullName>
            </value>
            <value>
                <fullName>LISA-U2</fullName>
            </value>
            <value>
                <fullName>MAYA-W1</fullName>
            </value>
            <value>
                <fullName>MAYA-W2</fullName>
            </value>
            <value>
                <fullName>MDM6200</fullName>
            </value>
            <value>
                <fullName>MDM9207-1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>