force-app/main/default/objects/Contract/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Source Case from that the Contract has been created. Used for e-NDA (web-to-case).</description>
    <inlineHelpText>Source Case from that the Contract has been created. Used for e-NDA (web-to-case).</inlineHelpText>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>