force-app/main/default/objects/Contract/fields/Special_Terms__c.field-meta.xml
<CustomField>
    <fullName>Special_Terms__c</fullName>
    <description>Indicates special terms</description>
    <label>Special Terms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automotive customer</fullName>
            </value>
            <value>
                <fullName>EoL/PCN conditions beyond standard</fullName>
            </value>
            <value>
                <fullName>Epidemic failure &gt; 5 years</fullName>
            </value>
            <value>
                <fullName>GNSS only</fullName>
            </value>
            <value>
                <fullName>IFRS 15</fullName>
            </value>
            <value>
                <fullName>LoL equal or greater than 1 mio USD</fullName>
            </value>
            <value>
                <fullName>No sub-cap for late delivery</fullName>
            </value>
            <value>
                <fullName>Payment terms &gt;30 days</fullName>
            </value>
            <value>
                <fullName>Removal and installation &gt; 5 years</fullName>
            </value>
            <value>
                <fullName>Royalties to u-blox</fullName>
            </value>
            <value>
                <fullName>SEP coverage beyond GT&amp;C</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>