force-app/main/default/objects/Contract/fields/u_blox_Entity__c.field-meta.xml
<CustomField>
    <fullName>u_blox_Entity__c</fullName>
    <description>Defines for what u-blox entity have contract entered</description>
    <label>u-blox Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>u-blox AG</fullName>
            </value>
            <value>
                <fullName>u-blox America Inc.</fullName>
            </value>
            <value>
                <fullName>u-blox Italy SpA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>