force-app/main/default/objects/Contract/validationRules/Restrict_Owner_with_Profile.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Owner_with_Profile</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Owner.Profile.Name = &apos;Partner Base Quotation&apos;,Owner.Profile.Name = &apos;Partner Base&apos;)</errorConditionFormula>
    <errorMessage>Contract Cannot be present with Owner having profile &apos;Partner Base Quotation&apos;</errorMessage>
</ValidationRule>