force-app/main/default/objects/Contract/listViews/All_Contracts.listView-meta.xml
<ListView>
    <fullName>All_Contracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>Contract_Category__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Special_Terms__c</columns>
    <columns>u_blox_Entity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contracts</label>
</ListView>