force-app/main/default/objects/Contract/listViews/AllContracts.listView-meta.xml
<ListView>
    <fullName>AllContracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Contract_Category__c</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTRACT.STATUS_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Category__c</field>
        <operation>equals</operation>
        <value>Sales Agreement</value>
    </filters>
    <label>Sales Agreement</label>
</ListView>