force-app/main/default/objects/Contract/listViews/MyDraftContracts.listView-meta.xml
<ListView>
    <fullName>MyDraftContracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Contract_Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Category__c</field>
        <operation>equals</operation>
        <value>&quot;MoU, LoI, MoA&quot;</value>
    </filters>
    <label>MoU, LoI, MoA</label>
</ListView>