force-app/main/default/objects/Contract/listViews/NDA.listView-meta.xml
<ListView>
    <fullName>NDA</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Contract_Description__c</columns>
    <columns>CONTRACT.BILLING_CITY</columns>
    <columns>CONTRACT.BILLING_COUNTRY</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Category__c</field>
        <operation>contains</operation>
        <value>NDA</value>
    </filters>
    <label>NDAs</label>
</ListView>